--- a/etl/postgres_to_es/requirements.txt
+++ b/etl/postgres_to_es/requirements.txt
@@ -1,11 +1,11 @@
-annotated-types
-certifi
-elastic-transport
-elasticsearch
-psycopg2-binary
-pydantic
-pydantic-settings
-pydantic_core
-python-dotenv
-typing_extensions
-urllib3
+annotated-types==0.7.0
+certifi==2024.6.2
+elastic-transport==8.13.1
+elasticsearch==8.14.0
+psycopg2-binary==2.9.9
+pydantic==2.7.4
+pydantic-settings==2.3.4
+pydantic_core==2.18.4
+python-dotenv==1.0.1
+typing_extensions==4.12.2
+urllib3==2.2.2
